# KaTestrophe.cmake

./: .gitignore  CMakeLists.txt  KaTestrophe.cmake  MPIGoogleTest.cmake  MPIGoogleTestAddTests.cmake  README.md  cmake-format.py  gtest-mpi-listener.hpp  mpi_gtest_main.cpp
.github/workflows/: cmake-single-platform.yml
tests/: CMakeLists.txt  simple_test.cpp
